# Hook

./: Readme.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  test.yml
.husky/: pre-commit
Api/: .env.example  .gitignore  Cargo.toml  Dockerfile  Readme.md
Api/src/: main.rs
Api/src/IAModel/: main.py  model.py
Api/src/api/: companies_api.rs  mod.rs  offers_api.rs  students_api.rs  user_api.rs
Api/src/models/: companies_model.rs  mod.rs  offers_model.rs  students_model.rs  user_model.rs
Api/src/neural/: model.py
Api/src/repository/: mongodb_repo.rs
Front/: .eslintrc.cjs  .npmrc.example  .prettierrc.json  README.md  auto-import.config.js  components.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
Front/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts
Front/src/assets/: DarkLogo.vue  index.css
Front/src/components/: NavBar.vue
Front/src/data/: companyImage.ts  neris.ts  newOfferConst.ts  wording.ts
Front/src/router/: index.ts
Front/src/stores/: companyStore.ts  recruiterRegistration.ts  recruiterStore.ts  studentRegistration.ts  studentStore.ts  userTypeStore.ts
Front/src/utils/: apiErrorUtils.ts  arrayUtils.ts  authenticationUtils.ts  chipUtils.ts  companyApiUtils.ts  convertUtils.ts  dateUtils.ts  getQueryRouteUtils.ts  inputValidationUtils.ts  offerApiUtils.ts  populateCompanyStore.ts  populateRecruiterStore.ts  populateStudentUtils.ts  screenSize.ts  screenSizeUtils.ts  storageUtils.ts  (+2 more)
Front/tests/: setup.ts
(+119 files in other folders)
