[package]
name = "apipfe"
version = "0.1.0"
authors = ["Lucas <lucas.werey@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

   [dependencies]
    rocket = {version = "0.5.0-rc.2", features = ["json"]}
    serde = "1.0.136"
    dotenv = "0.15.0"
    bcrypt = "0.10.1"
    rocket_cors = "0.6.0"
    jsonwebtoken = "7.2.0"
    rocket_contrib = "0.4.10"
    chrono = "0.4.19"

    [dependencies.mongodb]
    version = "2.2.0"
    default-features = false
    features = ["sync"]